# taskmanager

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_FIX.md  Makefile  QUICK_FIX.md  QUICK_START.md  README.md  SECURITY.md  TESTING.md  TODO.md  astro.config.mjs  docker-compose.yml  eslint.config.js  openapi.yaml  package-lock.json  package.json  pyproject.toml  test_oauth.sh  vitest.config.js
.github/: dependabot.yml  security-tests-enhanced.js
.husky/: pre-commit
backend/: .gitignore  Dockerfile  pyproject.toml
db/: docker-compose.yml
docs/: BUG_FIXES_AND_PERFORMANCE.md  DEPLOYMENT.md  E2E_TEST_RESULTS.md  MIGRATION_PLAN.md  agent-integration-improvements.md  deadline-type.md  news-aggregator.md  service-account-authentication.md  webauthn.md  wiki.md
frontend/: .env.example  .env.production  .gitignore  Dockerfile  package.json  playwright.config.ts
scripts/: check-docker-uv-run.sh  check-openapi.js  install-cron.sh  mcp-device-auth.sh  mcp-refresh-token.sh  migrate.js  precommit_metrics_wrapper.sh
services/backend/: .env.test  .pre-commit-config.yaml  Dockerfile  README.md  demo.yaml  demo_config.json  pyproject.toml
services/backend/alembic/: env.py
services/backend/alembic/versions/: 0001_initial_schema.py  0002_fix_access_tokens_schema.py  0003_add_registration_codes.py  0004_add_subtasks.py  0005_add_attachments.py  0006_add_oauth_providers.py  0006_add_position_and_archived_at.py  0007_add_agent_fields.py  0008_add_api_keys.py  0009_add_api_keys_composite_index.py  0010_add_autonomy_tier.py  0011_add_task_dependencies.py  0011_add_webauthn_credentials.py  0012_add_project_stats_index.py  0012_add_webauthn_credentials.py  0013_add_oauth_providers.py  0013_add_project_stats_index.py  0014_add_oauth_providers.py  0015_remove_username.py  0016_add_comments.py  0016_add_is_featured_to_feed_sources.py  0017_add_is_featured_index.py  0017_add_is_featured_to_feed_sources.py  0018_add_is_featured_index.py  0019_add_updated_at_server_default.py  0020_add_deadline_type.py  0020_add_service_account_fields.py  0021_add_deadline_type.py  0022_add_mcp_token_tables.py  0023_add_wiki_revisions_and_soft_delete.py  0024_make_project_name_unique_per_user.py  0025_add_wiki_parent_id_and_tags.py  0026_add_snippets.py  0027_add_show_on_calendar_to_projects.py  0028_add_bookmark_fields_to_article_interactions.py  0029_add_wiki_notifications.py  0030_add_ai_summary_to_articles.py  0031_add_event_bus_triggers.py  0032_add_shared_state_table.py  18109dd3e9b6_add_wiki_pages_and_todo_wiki_links.py  (+5 more)
services/backend/app/: config.py  dependencies.py  main.py
services/backend/app/api/: __init__.py  admin_loki.py  api_keys.py  attachments.py  auth.py  categories.py  comments.py  events.py  news.py  notifications.py  projects.py  recurring_tasks.py  registration_codes.py  relay.py  search.py  service_accounts.py  snippets.py  todos.py  trash.py  unified_search.py  webauthn.py  wiki.py
services/backend/app/api/oauth/: __init__.py  authorize.py  clients.py  device.py  github.py  token.py
services/backend/app/core/: __init__.py  csrf.py  errors.py  rate_limit.py  security.py  security_headers.py  session.py  tab_id.py
services/backend/app/db/: database.py  queries.py
services/backend/app/models/: __init__.py  api_key.py  article.py  article_interaction.py  attachment.py  comment.py  feed_source.py  notification.py  oauth.py  oauth_provider.py  project.py  recurring_task.py  registration_code.py  session.py  shared_state.py  snippet.py  todo.py  user.py  webauthn_credential.py  wiki_page.py
services/backend/app/schemas/: __init__.py
services/backend/app/services/: article_summarizer.py  event_bus.py  github_oauth.py  news_fetcher.py  scheduler.py  storage.py  token_encryption.py
services/backend/app/templates/: login.html  oauth_authorize.html
services/backend/data/: README.md  feed_sources.json  feed_sources.sql
services/backend/scripts/: README.md  reset_test_db.py  seed_news_feeds.py  seed_test_data.py  start_test_server.sh  test_fetch_news.py
services/backend/tests/: __init__.py  conftest.py  test_admin_loki.py  test_api_keys.py  test_article_summarizer.py  test_attachments.py  test_auth.py  test_bcrypt_compat.py  test_categories.py  test_client_credentials_identity.py  test_comments.py  test_csrf.py  test_db_queries.py  test_dependencies.py  test_event_bus.py  test_github_oauth.py  test_health.py  test_metrics.py  test_news.py  test_news_engagement.py  test_notifications.py  test_oauth.py  test_oauth_authorize.py  test_oauth_device.py  test_projects.py  test_rate_limit.py  test_recurring_tasks.py  test_registration_codes.py  test_relay.py  test_security_headers.py  test_service_accounts.py  test_snippets.py  test_ssrf_protection.py  test_task_dependencies.py  test_todos.py  test_trash.py  test_unified_search.py  test_webauthn.py  test_wiki.py
services/mcp-auth/: Dockerfile  README.md  TODO.md  pyproject.toml
services/mcp-auth/mcp_auth/: __init__.py  auth_server.py  cimd.py  config.py  jwt_auth.py  taskmanager_oauth_provider.py  token_storage.py
services/mcp-auth/mcp_auth/templates/: authorization_callback.html
services/mcp-auth/tests/: conftest.py  test_cimd.py  test_client_registration.py  test_device_flow.py  test_jwt_auth.py  test_refresh_tokens.py  test_token_debug_logging.py  test_token_validation.py  test_transform_client_data.py
services/mcp-relay/: Dockerfile  pyproject.toml
services/mcp-relay/mcp_relay/: api.py  cli.py  debug.py  redis_store.py  server.py  types.py
services/mcp-relay/tests/: test_api.py  test_cli.py  test_debug.py  test_redis_store.py  test_server.py
services/mcp-resource/: Dockerfile  README.md  pyproject.toml
services/mcp-resource/mcp_resource/: __init__.py  config.py  lakera_guard.py  server.py  token_verifier.py  validation.py
services/mcp-resource/tests/: conftest.py  test_lakera_guard.py  test_mcp_tools.py  test_server.py  test_token_verifier.py
src/: middleware.js
tests/: README.md  api.test.js  setup.js  (+4 more)
(+329 files in other folders)
